# appimage-token-finder

./: .gitignore  README.md  pyproject.toml
appimage_token_finder/: __main__.py
